项目启动优化

--- a/moki-tomoko/moki-tomoko-service-biz/src/main/resources/application-dev.properties
+++ b/moki-tomoko/moki-tomoko-service-biz/src/main/resources/application-dev.properties
@@ -7,14 +7,12 @@ dubbo.registry.protocol=zookeeper
 dubbo.registry.address=127.0.0.1:2181
 dubbo.protocol.port=21811
 server.port=8082
-#mybatis配置
-mybatis-plus.global-config.refresh-mapper=true
 
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.druid.url=jdbc:mysql://114.67.110.90/moki_tomoko?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false&serverTimezone=GMT%2B8
+spring.datasource.druid.url=jdbc:mysql://127.0.0.1/test?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false&serverTimezone=GMT%2B8
 spring.datasource.druid.username=root
-spring.datasource.druid.password=1qaz@WSX
+spring.datasource.druid.password=123456
 spring.datasource.druid.initial-size=10
 spring.datasource.druid.max-active=100
 spring.datasource.druid.min-idle=10
@@ -33,4 +31,22 @@ spring.datasource.druid.filter.stat.log-slow-sql=true
 spring.datasource.druid.filter.stat.slow-sql-millis=1000
 spring.datasource.druid.filter.stat.merge-sql=false
 spring.datasource.druid.filter.wall.config.multi-statement-allow=true
+
+
+#mybatis配置
+mybatis-plus.global-config.refresh-mapper=true
+mybatis-plus.mapper-locations=classpath:mapper/*.xml
+mybatis-plus.global-config.id-type=0
+mybatis-plus.global-config.field-strategy=1
+mybatis-plus.configuration.map-underscore-to-camel-case=true
+
+pagehelper.helper-dialect=mysql
+pagehelper.reasonable=true
+pagehelper.supportMethodsArguments=true
+
+#开启sql打印
+logging.level.com.im.ams.bill.biz.mapper=DEBUG
+logging.config=classpath:logback-spring.xml
+
+
 
