--- a/moki-tomoko/moki-tomoko-service-biz/pom.xml
+++ b/moki-tomoko/moki-tomoko-service-biz/pom.xml
@@ -66,6 +66,11 @@
 			<version>4.0.1</version>
 		</dependency>
 		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid-spring-boot-starter</artifactId>
+			<version>1.1.9</version>
+		</dependency>
+		<dependency>
 			<groupId>com.baomidou</groupId>
 			<artifactId>mybatis-plus</artifactId>
 			<version>2.1.9</version>
@@ -73,7 +78,7 @@
 		<dependency>
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter</artifactId>
-			<version>2.0.0</version>
+			<version>1.3.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.baomidou</groupId>
