--- a/moki-tomoko/moki-tomoko-service-api/pom.xml
+++ b/moki-tomoko/moki-tomoko-service-api/pom.xml
@@ -29,6 +29,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>com.im</groupId>
+			<artifactId>moki-common</artifactId>
+			<version>1.0.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
