添加节目单

--- a/moki-tomoko/moki-tomoko-service-biz/src/main/resources/application-prod.properties
+++ b/moki-tomoko/moki-tomoko-service-biz/src/main/resources/application-prod.properties
@@ -4,14 +4,14 @@ spring.application.name=moki
 #dubbo配置
 dubbo.version=1.0.0
 dubbo.registry.protocol=zookeeper
-dubbo.registry.address=127.0.0.1:2181
+dubbo.registry.address=114.67.110.90:2181
 dubbo.protocol.port=21811
 server.port=8082
 
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
 #spring.datasource.druid.url=jdbc:mysql://114.67.110.90/moki_tomoko?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false&serverTimezone=GMT%2B8
-spring.datasource.druid.url=jdbc:mysql://114.67.110.90/moki_tomoko_dev?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true
+spring.datasource.druid.url=jdbc:mysql://114.67.110.90/moki_tomoko?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true
 spring.datasource.druid.username=root
 spring.datasource.druid.password=1qaz@WSX
 spring.datasource.druid.initial-size=10
