maven 父子模块调整

--- a/moki-common/pom.xml
+++ b/moki-common/pom.xml
@@ -53,23 +53,7 @@
 	</dependencies>
 
 	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<version>1.5.3.RELEASE</version>
-				<configuration>
-					<mainClass>com.xx.webapps.api.main.WebappsApiBidMain</mainClass>
-				</configuration>
-				<executions>
-					<execution>
-						<goals>
-							<goal>repackage</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
+		<finalName>${project.artifactId}</finalName>
 	</build>
 
 </project>
