--- a/moki-tomoko/moki-tomoko-service-biz/src/main/resources/application-dev.properties
+++ b/moki-tomoko/moki-tomoko-service-biz/src/main/resources/application-dev.properties
@@ -11,9 +11,9 @@ server.port=8082
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
 #spring.datasource.druid.url=jdbc:mysql://114.67.110.90/moki_tomoko?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false&serverTimezone=GMT%2B8
-spring.datasource.druid.url=jdbc:mysql://114.67.110.90/moki_tomoko_dev?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true
+spring.datasource.druid.url=jdbc:mysql://127.0.0.1/test?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true
 spring.datasource.druid.username=root
-spring.datasource.druid.password=1qaz@WSX
+spring.datasource.druid.password=123456
 spring.datasource.druid.initial-size=10
 spring.datasource.druid.max-active=100
 spring.datasource.druid.min-idle=10
