--- a/moki-tomoko/moki-tomoko-service-biz/src/main/resources/application-prod.properties
+++ b/moki-tomoko/moki-tomoko-service-biz/src/main/resources/application-prod.properties
@@ -11,7 +11,7 @@ server.port=8082
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
 #spring.datasource.druid.url=jdbc:mysql://114.67.110.90/moki_tomoko?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false&serverTimezone=GMT%2B8
-spring.datasource.druid.url=jdbc:mysql://114.67.110.90/moki_tomoko?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true
+spring.datasource.druid.url=jdbc:mysql://114.67.110.90/tomokotv?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true
 spring.datasource.druid.username=root
 spring.datasource.druid.password=1qaz@WSX
 spring.datasource.druid.initial-size=10
