--- a/moki-tomoko/pom.xml
+++ b/moki-tomoko/pom.xml
@@ -24,12 +24,7 @@
 	</dependencies>
 
 	<build>
-		<plugins>
-		<plugin>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-maven-plugin</artifactId>
-		</plugin>
-	</plugins>
+		<finalName>ams-bill-biz</finalName>
 	</build>
 
 </project>
