--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,10 @@
 	<name>moki</name>
 
 	<modules>
+		<module>moki-common</module>
+		<module>moki-tomoko</module>
 		<module>moki-web</module>
 		<module>moki-admin</module>
-		<module>moki-tomoko</module>
 	</modules>
 	<description>Demo project for Spring Boot</description>
 
@@ -102,22 +103,23 @@
 	</dependencies>
 
 	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
+		<finalName>${project.artifactId}</finalName>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
 	</build>
 
 	<distributionManagement>
 		<repository>
 			<id>releases</id>
-			<url>http://localhost:8081/repository/ss_hosted/</url>
+			<url>http://172.20.20.55:8081/nexus/content/repositories/releases</url>
 		</repository>
 		<snapshotRepository>
 			<id>snapshots</id>
-			<url>http://localhost:8081/repository/ss_hosted1/</url>
+			<url>http://172.20.20.55:8081/nexus/content/repositories/snapshots</url>
 		</snapshotRepository>
 	</distributionManagement>
 </project>
