maven 配置文件调整

--- a/moki-admin/src/main/resources/application-dev.properties
+++ b/moki-admin/src/main/resources/application-dev.properties
@@ -5,5 +5,14 @@ dubbo.registry.address=127.0.0.1:2181
 dubbo.protocol.port=21810
 server.port=8090
 
+logging.config=classpath:logback-spring.xml
+
+spring.mvc.static-path-pattern=classpath:/static/**
+spring.freemarker.suffix=.html
+spring.freemarker.charset=UTF-8
+spring.freemarker.check-template-location=true
+spring.freemarker.template-loader-path=classpath:/templates
+spring.freemarker.request-context-attribute=request
+
 
 
