--- a/moki-admin/src/main/resources/application-prod.properties
+++ b/moki-admin/src/main/resources/application-prod.properties
@@ -5,5 +5,5 @@ dubbo.registry.address=114.67.110.90:2181
 dubbo.protocol.port=21810
 server.port=8090
 
-
-
+logging.config=classpath:logback-spring.xml
+spring.freemarker.template-loader-path=classpath:/templates
