maven 配置文件调整

--- a/moki-web/src/main/resources/application-dev.properties
+++ b/moki-web/src/main/resources/application-dev.properties
@@ -8,3 +8,11 @@ server.port=8080
 
 #日志
 logging.config=classpath:logback-spring.xml
+#thymeleaf start
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
+#开发时关闭缓存,不然没法看到实时页面
+spring.thymeleaf.cache=false
+#static 文件夹下的静态文件访问路径
+spring.mvc.static-path-pattern=/**
+#thymeleaf end
