--- a/moki-admin/src/main/resources/application-dev.properties
+++ b/moki-admin/src/main/resources/application-dev.properties
@@ -7,12 +7,14 @@ server.port=8090
 
 logging.config=classpath:logback-spring.xml
 
-spring.mvc.static-path-pattern=classpath:/static/**
-spring.freemarker.suffix=.html
-spring.freemarker.charset=UTF-8
-spring.freemarker.check-template-location=true
-spring.freemarker.template-loader-path=classpath:/templates
-spring.freemarker.request-context-attribute=request
+#thymeleaf start
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
+#开发时关闭缓存,不然没法看到实时页面
+spring.thymeleaf.cache=false
+#static 文件夹下的静态文件访问路径
+spring.mvc.static-path-pattern=/**
+#thymeleaf end
 
 
 
