--- a/moki-admin/src/main/resources/application-prod.properties
+++ b/moki-admin/src/main/resources/application-prod.properties
@@ -6,4 +6,11 @@ dubbo.protocol.port=21810
 server.port=8090
 
 logging.config=classpath:logback-spring.xml
-spring.freemarker.template-loader-path=classpath:/templates
+#thymeleaf start
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
+#开发时关闭缓存,不然没法看到实时页面
+spring.thymeleaf.cache=false
+#static 文件夹下的静态文件访问路径
+spring.mvc.static-path-pattern=/**
+#thymeleaf end
